--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,3 +29,10 @@ section#telefone{
     background-color: blue;
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
