--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,22 @@ iframe#tela{
     width: 269px;
     height: 471px;
 }
+section#redes{
+
+}
+
+section#redes  img{
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+    display: block;
+}
+section#redes img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.699);
+    transform: translate(-10px, -10px );
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.733);
+    transition: transform 0.5s, border 1s;
+}
